--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
         "axios-debug-log": "^1.0.0",
         "ejs": "^3.1.8",
         "fastify-cookie": "^5.7.0",
-        "fastify-session": "^5.2.1"
+        "fastify-session": "^5.2.1",
+        "knex": "^2.4.2",
+        "sqlite3": "^5.1.4"
     }
 }
